--- a/.env.example
+++ b/.env.example
@@ -4,7 +4,7 @@
 #
 # ISTRUZIONI:
 # 1. Copia questo file in .env
-# 2. Modifica i valori con credenziali sicure
+# 2. Modifica i valori con le tue configurazioni
 # 3. NON committare .env nel repository!
 #
 # GENERA PASSWORD SICURE:
@@ -13,39 +13,69 @@
 # ============================================
 
 # ------------------------------------------
-# MySQL
+# Java e Tomcat - Percorsi Installazione
 # ------------------------------------------
-MYSQL_ROOT_PASSWORD=CAMBIAMI_password_root
+# Modifica questi percorsi in base alla tua installazione.
+# Esempi per sistemi operativi comuni:
+#
+# JAVA_HOME:
+#   Linux:   /usr/lib/jvm/java-17-openjdk-amd64
+#   macOS:   /Library/Java/JavaVirtualMachines/jdk-17.jdk/Contents/Home
+#   Windows: C:\Program Files\Java\jdk-17
+#
+# CATALINA_HOME:
+#   Linux:   /opt/tomcat11
+#   macOS:   /usr/local/opt/tomcat/libexec
+#   Windows: C:\Program Files\Apache Software Foundation\Tomcat 11.0
+# ------------------------------------------
+JAVA_HOME=/usr/lib/jvm/java-17-openjdk-amd64
+CATALINA_HOME=/opt/tomcat11
+
+# ------------------------------------------
+# MySQL - Credenziali Database
+# ------------------------------------------
+# IMPORTANTE: Queste credenziali vengono usate da Docker
+# per creare automaticamente l'utente del database.
+# Le STESSE credenziali devono essere configurate nel
+# setenv.sh di Tomcat per la connessione dell'applicazione.
+#
+# L'utente viene creato con permessi limitati (SELECT, INSERT,
+# UPDATE, DELETE) come da schema.sql - principio minimo privilegio.
+# ------------------------------------------
+MYSQL_ROOT_PASSWORD=CAMBIAMI_password_root_sicura
 MYSQL_DATABASE=secure_file_share
 MYSQL_USER=secure_app_user
-MYSQL_PASSWORD=CAMBIAMI_password_app
+MYSQL_PASSWORD=CAMBIAMI_password_app_sicura
 
 # ------------------------------------------
-# Vault
+# Vault - Gestione Segreti
 # ------------------------------------------
-# Indirizzo Vault (Docker: http://localhost:8200)
+# VAULT_ADDR: Indirizzo del server Vault
+# VAULT_TOKEN: Generato automaticamente al primo avvio.
+#              Dopo `docker-compose up -d`, recuperalo con:
+#              cat vault/generated-token.txt
+# ------------------------------------------
 VAULT_ADDR=http://localhost:8200
-
-# Generato automaticamente al primo avvio.
-# Dopo `docker-compose up -d`, recuperalo con:
-#   cat vault/generated-token.txt
 VAULT_TOKEN=
 
 # ------------------------------------------
 # Chiave AES per cifratura (256-bit)
 # ------------------------------------------
-# Se vuoto, viene generata automaticamente.
+# Usata per cifrare email e file.
+# Se vuoto, viene generata automaticamente da Vault.
 # Per generare manualmente: openssl rand -base64 32
+# ------------------------------------------
 AES_ENCRYPTION_KEY=
 
 # ------------------------------------------
-# Upload
+# Upload File
 # ------------------------------------------
-# Path relativo: salvato in {user.home}/SecureFileShare/{path}
-# Path assoluto: usato direttamente
+# UPLOAD_DIRECTORY: 
+#   - Path relativo: salvato in {user.home}/SecureFileShare/{path}
+#   - Path assoluto: usato direttamente
+# UPLOAD_MAX_SIZE: Dimensione massima in bytes (1 MB = 1048576)
+# ------------------------------------------
 UPLOAD_DIRECTORY=uploads
-
-# Dimensione massima file in bytes (1 MB = 1048576)
 UPLOAD_MAX_SIZE=1048576
 
 # ------------------------------------------
@@ -58,30 +88,31 @@ EMAIL_MAX_LENGTH=254
 # ------------------------------------------
 # File Upload - Whitelist
 # ------------------------------------------
-# Estensioni consentite (separate da virgola)
+# Estensioni e MIME types consentiti (separati da virgola)
+# Per aggiungere altri tipi: .txt,.pdf,.docx
+# ------------------------------------------
 FILE_ALLOWED_EXTENSIONS=.txt
-
-# MIME types consentiti (separati da virgola)
 FILE_ALLOWED_MIMETYPES=text/plain
-
-# Buffer size per lettura file in bytes
 FILE_BUFFER_SIZE=8192
 
 # ------------------------------------------
 # Sessione e Cookie
 # ------------------------------------------
-# Timeout sessione in secondi (900 = 15 minuti)
+# SESSION_TIMEOUT: secondi (900 = 15 minuti)
+# COOKIE_SECURE: true richiede HTTPS
+# COOKIE_HTTPONLY: previene accesso JavaScript
+# COOKIE_SAMESITE: Strict, Lax, None
+# ------------------------------------------
 SESSION_TIMEOUT=900
-
-# Cookie flags (true/false)
 COOKIE_SECURE=true
 COOKIE_HTTPONLY=true
-
-# SameSite: Strict, Lax, None
 COOKIE_SAMESITE=Strict
 
 # ------------------------------------------
 # HSTS (HTTP Strict Transport Security)
+# ------------------------------------------
+# Forza il browser a usare solo HTTPS per le connessioni future
+# HSTS_MAX_AGE: secondi (31536000 = 1 anno)
 # ------------------------------------------
 HSTS_ENABLED=true
 HSTS_MAX_AGE=31536000
@@ -90,11 +121,17 @@ HSTS_INCLUDE_SUBDOMAINS=true
 # ------------------------------------------
 # Sicurezza Password (PBKDF2)
 # ------------------------------------------
+# PBKDF2_ITERATIONS: 310000 come da OWASP 2023
+# SALT_LENGTH: 16 bytes (128 bit)
+# KEY_LENGTH: 256 bit
+# ------------------------------------------
 PBKDF2_ITERATIONS=310000
 SALT_LENGTH=16
 KEY_LENGTH=256
 
 # ------------------------------------------
 # CSP Nonce
+# ------------------------------------------
+# Lunghezza del nonce generato per Content-Security-Policy
 # ------------------------------------------
 NONCE_LENGTH=16
